# kanjo

./: Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
src/kanjo/: app.py  db.py  global.tcss  main.py  messages.py  models.py  settings.py
src/kanjo/widgets/: __init__.py  confirm_modal.py  logs_table.py  mood_picker.py  new_mood_modal.py
