[project]
name = "kanjo"
version = "0.1.5"
description = "A simple mood tracker for the terminal built with textual."
authors = [{ name = "dnlzrgz", email = "contact@dnlzrgz.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
  "click>=8.1.8",
  "pydantic-settings>=2.7.1",
  "rich>=13.9.4",
  "sqlmodel>=0.0.22",
  "textual>=1.0.0",
]

[project.urls]
homepage = "https://dnlzrgz.com/projects/kanjo/"
source = "https://github.com/dnlzrgz/kanjo"
issues = "https://github.com/dnlzrgz/kanjo/issues"
releases = "https://github.com/dnlzrgz/kanjo/releases"

[dependency-groups]
dev = [
  "commitizen>=4.1.0",
  "pre-commit>=4.0.1",
  "ruff>=0.8.4",
  "textual-dev>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
kanjo = "kanjo:main.main"
